--- a/pream/Info.plist
+++ b/pream/Info.plist
@@ -20,6 +20,17 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>카메라 써두 돼요???</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>사진첨에 저장해도 돼요???</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진첩 써두 돼요???</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -32,12 +43,6 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>카메라 써두 돼요???</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>사진첩 써두 돼요???</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>사진첨에 저장해도 돼요???</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
